Correction alignement combobox inventaire

--- a/GestLab/static/css/inventaire.css
+++ b/GestLab/static/css/inventaire.css
@@ -48,6 +48,7 @@
     flex-direction: row;
     gap: 25px;
     margin-bottom: 25px;
+    align-items: center;
 }
 
 .filter-container > p {
